# python-pixie-hollow

./: README.md  callable_instances.md  devex.md  pro-tips-for-pythonistas.md  requests_best_practices.md  setting-up-pyenv-fedora.md  vs-code.md
REST/: choose-your-adv.yml  oas_example_service.yml  oas_music_api.yml  readme.md
code-stash/: jinja2_samples.py  lead.py  oop_vars.py  pyargs.py
code-stash/bankpack/: setup.py
code-stash/category_api/: requirements.txt
code-stash/flask_todo_app/: dockerfile  readme.md
code-stash/geo_game/: point.py
code-stash/logzero/: logzero_example.py  (+1 more)
fastAPI/: readme.md
fugue/: credit_scoring_data.csv  fugue_sample.py  requirements.txt  timeit.py
hdb_rent/: plot_hdb_rent.ipynb
html_boto3_v1_42_49/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
mongodb_rag/: installed_requirements.txt  rag_with_mongodb.py  requirements.txt
parsing_xml/: movies.xml  new_movies.xml  parse_xml_file.py  readme.md
pip-audit/: readme.md  requirements.txt
poetry/dl-utils/: README.md  pyproject.toml
poetry/dl-utils/dl_utils/: __init__.py  athena_utils.py  emr_utils.py  s3_utils.py
poetry/dl-utils/dl_utils/cli/: main.py
poetry/dl-utils/docs/: conf.py  index.rst  modules.rst
poetry/dl-utils/tests/: test_basic.py
python-functional-programming/: README.md  test.py
regression_framework/: behave-html-report.html  combined-junit-report.xml  regression_dag.py  requirements.txt  run_local.py
web_scraping/: README.md  scrape_llm_leaderboard.py  scrape_openai_change_log.py  scrape_openai_change_log_dynamic.py
(+49993 files in other folders)
