[tool.poetry]
name = "dl-utils"
version = "0.1.0"
description = "Data Lake utilities"
authors = ["Blessy Moses <blessy@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.24"
click = "^8.1"
sphinx = "^8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
sphinx = "^8.2"

[tool.poetry.group.dev.dependencies]
sphinx-autodoc-typehints = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
